<package>
  <name>dubins_traffic_examples</name>
  <version>0.0.4</version>
  <description>
    examples for the "Traffic network of Dubins cars" problem domain.
  </description>
  <maintainer email="slivingston@cds.caltech.edu">SCL</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>integrator_chains_msgs</build_depend>
  <build_depend>dubins_traffic_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
