<package>
  <name>sci_concrete_examples</name>
  <version>0.0.4</version>
  <description>
    examples for the "scaling chains of integrators" problem domain.
  </description>
  <maintainer email="slivingston@cds.caltech.edu">SCL</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>integrator_chains_msgs</build_depend>
  <run_depend>integrator_chains_msgs</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>
