<package>
  <name>dynamaestro</name>
  <version>0.0.0</version>
  <description>
    dynamaestro, motivated by the "scaling chains of integrators" problem domain.
  </description>
  <maintainer email="slivingston@cds.caltech.edu">SCL</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
