<package>
  <name>dynamaestro</name>
  <version>0.0.0</version>
  <description>
    dynamaestro, motivated by the "scaling chains of integrators" problem domain.
  </description>
  <maintainer email="slivingston@cds.caltech.edu">SCL</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>integrator_chains_msgs</build_depend>
</package>
