<package>
  <name>integrator_chains_msgs</name>
  <version>0.0.4</version>
  <description>
    ROS message and service types for the integrator_chains domain.
  </description>
  <maintainer email="slivingston@cds.caltech.edu">SCL</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
