<?xml version="1.0"?>
<package>
  <name>wander</name>
  <version>0.0.0</version>
  <description>package for running adversarial cars that wander about the
  network of roads. based on code by SCL originally developed for the course
  ME132a at Caltech.</description>

  <maintainer email="vasu@caltech.edu">Vasu</maintainer>
  <license>public domain, or equivalent in jurisdictions that do not allow it</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export></export>
</package>
